# napari-amdtrk-plugin

./: .gitignore  CITATION.cff  LICENSE  README.md  setup.cfg  tox.ini
.napari/: DESCRIPTION.md
src/napari_amdtrk/: __init__.py  _reader.py  _sample_data.py  _utils.py  _widget.py  napari.yaml
src/napari_amdtrk/_tests/: test_reader.py  test_sample_data.py  test_widget.py
