[metadata]
name = napari-amdtrk
version = 1.0.0
description = Manually amend segmentation and track within napari
long_description = file: README.md
long_description_content_type = text/markdown

author = Yifan Gui
author_email = jeffgui9912@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing

url = https://github.com/Jeff-Gui/napari-amdtrk-plugin
project_urls =
    Bug Tracker = https://github.com/Jeff-Gui/napari-amdtrk-plugin/issues
    Documentation = https://github.com/Jeff-Gui/napari-amdtrk-plugin/blob/master/README.md
    Source Code = https://github.com/Jeff-Gui/napari-amdtrk-plugin


[options]
packages = find:
install_requires =
    numpy < 1.24
    magicgui
    qtpy
    trackpy
    pandas
    scikit-image

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-amdtrk = napari_amdtrk:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
